examples/test/testpolicy12623.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12623
  namespace: namespace19
spec:
  podSelector:
    matchLabels:
      key27: value49
      key15: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value32
          key7: value3
      podSelector:
        matchLabels:
          key12: value46
          key23: value4
